--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,36 @@
 {
     "cSpell.words": [
+        "adipisci",
+        "Aplicaciones",
+        "Blanes",
+        "Clientes",
+        "Contactar",
+        "Contacto",
+        "Correo",
+        "derechos",
         "Desarrollo",
+        "Desiño",
         "Diseño",
-        "Frelancer"
+        "earum",
+        "Enviar",
+        "Frelancer",
+        "Giorna",
+        "incidunt",
+        "Inicio",
+        "Mensaje",
+        "Nombre",
+        "odio",
+        "ordenador",
+        "possimus",
+        "reservados",
+        "Servicios",
+        "Sobre",
+        "Telefono",
+        "titulo",
+        "Todos",
+        "voluptatum"
+    ],
+    "cSpell.ignoreWords": [
+        "blanditiis"
     ]
 }
