--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,12 @@
 {
     "cSpell.words": [
+        "-webkit-appearance",
         "adipisci",
         "Aplicaciones",
+        "blanco",
         "Blanes",
         "Clientes",
+        "colorr",
         "Contactar",
         "Contacto",
         "Correo",
@@ -17,11 +20,14 @@
         "Giorna",
         "incidunt",
         "Inicio",
+        "Krub",
         "Mensaje",
         "Nombre",
         "odio",
         "ordenador",
+        "oscuro",
         "possimus",
+        "primario",
         "reservados",
         "Servicios",
         "Sobre",
@@ -32,5 +38,13 @@
     ],
     "cSpell.ignoreWords": [
         "blanditiis"
-    ]
+    ],
+    "cSpell.customDictionaries": {
+        "custom-dictionary-workspace": {
+            "name": "custom-dictionary-workspace",
+            "path": "${workspaceFolder:freelancer web }/.cspell/custom-dictionary-workspace.txt",
+            "addWords": true,
+            "scope": "workspace"
+        }
+    }
 }
