--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,38 @@
 {
     "cSpell.words": [
+        "Aplicaciones",
         "blanco",
+        "blanditiis",
+        "Blanes",
+        "Clientes",
+        "Contactar",
+        "Contacto",
         "contenedor",
+        "Correo",
+        "derechos",
+        "Desarrollo",
+        "Diseño",
+        "earum",
+        "Enviar",
+        "Giorna",
+        "incidunt",
+        "Inicio",
         "Krub",
+        "Mensaje",
         "navigacion",
+        "Nombre",
+        "odio",
+        "ordenador",
         "oscuro",
+        "possimus",
         "primario",
+        "reservados",
         "secundario",
-        "titulo"
+        "Servicios",
+        "Sobre",
+        "Telefono",
+        "titulo",
+        "Todos",
+        "voluptatum"
     ]
 }
