--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,10 +4,12 @@
         "blanco",
         "blanditiis",
         "Blanes",
+        "boton",
         "Clientes",
         "Contactar",
         "Contacto",
         "contenedor",
+        "contenido",
         "Correo",
         "derechos",
         "Desarrollo",
@@ -15,6 +17,8 @@
         "earum",
         "Enviar",
         "Giorna",
+        "Girona",
+        "globales",
         "incidunt",
         "Inicio",
         "Krub",
@@ -26,6 +30,7 @@
         "oscuro",
         "possimus",
         "primario",
+        "prueba",
         "reservados",
         "secundario",
         "Servicios",
@@ -33,6 +38,7 @@
         "Telefono",
         "titulo",
         "Todos",
+        "ubicacion",
         "voluptatum"
     ]
 }
