--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,8 +35,11 @@
         "secundario",
         "Servicios",
         "Sobre",
+        "sombra",
         "Telefono",
+        "tipografia",
         "titulo",
+        "tiutlos",
         "Todos",
         "ubicacion",
         "voluptatum"
