--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.words": [
+        "abajo",
+        "alinear",
         "Aplicaciones",
+        "arriba",
         "blanco",
         "blanditiis",
         "Blanes",
@@ -11,6 +14,7 @@
         "contenedor",
         "contenido",
         "Correo",
+        "derecha",
         "derechos",
         "Desarrollo",
         "Diseño",
@@ -21,6 +25,7 @@
         "globales",
         "incidunt",
         "Inicio",
+        "izquierda",
         "Krub",
         "Mensaje",
         "navigacion",
@@ -42,6 +47,7 @@
         "tiutlos",
         "Todos",
         "ubicacion",
+        "Utilidades",
         "voluptatum"
     ]
 }
